// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownButton component testing not splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-dkzDqf fxJLUT"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      class="sc-jSMfEi bUvNwg"
      data-testid="menu-toggle"
      disabled=""
      style="display: flex; justify-content: center; align-items: center; height: 32px; width: 100%; padding-inline: 8px; border-radius: 6px; border: 1px solid #0864d1; background: rgb(11, 130, 244); color: rgb(255, 255, 255); text-align: center; font-size: 13px; box-shadow: 0px -3px 0px 0px rgba(2, 37, 117, 0.06) inset, 0px 1px 0px 0px rgba(4, 28, 51, 0.04); transition: background 0.3s; margin: 0px; cursor: pointer; outline: none; text-decoration: none; letter-spacing: inherit; font-family: inherit; line-height: inherit;"
    >
      Save
      <div
        class="sc-gsnTZi cQnjyp"
      />
      <span
        class="sc-gKXOVf kFgTzX"
        size="18"
      >
        <svg
          viewBox="0 0 20 20"
        >
          <path
            d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
            fill="#B3BAC1"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-evZas kgXVOO"
  >
    <div
      class="sc-crXcEl hVvoWJ"
      id=":r2:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-iBkjds fmMROq"
      >
        <hr
          class="sc-iqcoie fxPshx"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-iqcoie fxPshx"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing not splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-dkzDqf fxJLUT"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      class="sc-jSMfEi bUvNwg"
      data-testid="menu-toggle"
      style="display: flex; justify-content: center; align-items: center; height: 32px; width: 100%; padding-inline: 8px; border-radius: 6px; border: 1px solid #0864d1; background: rgb(11, 130, 244); color: rgb(255, 255, 255); text-align: center; font-size: 13px; box-shadow: 0px -3px 0px 0px rgba(2, 37, 117, 0.06) inset, 0px 1px 0px 0px rgba(4, 28, 51, 0.04); transition: background 0.3s; margin: 0px; cursor: pointer; outline: none; text-decoration: none; letter-spacing: inherit; font-family: inherit; line-height: inherit;"
    >
      Save
      <div
        class="sc-gsnTZi cQnjyp"
      />
      <span
        class="sc-gKXOVf kFgTzX"
        size="18"
      >
        <svg
          viewBox="0 0 20 20"
        >
          <path
            d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
            fill="#FDFEFF"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-evZas gACLam"
  >
    <div
      class="sc-ksZaOG giEGhF fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-breuTD btMEjY"
      />
    </div>
    <div
      class="sc-crXcEl hVvoWJ"
      id=":r0:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-iBkjds fmMROq"
      >
        <hr
          class="sc-iqcoie fxPshx"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-iqcoie fxPshx"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited disable 1`] = `
<DocumentFragment>
  <div
    class="sc-dkzDqf fxJLUT"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      class="sc-hKMtZM byzedC"
      disabled=""
      style="display: inline-flex; justify-content: center; align-items: center; height: 32px; padding-inline: 8px; border-radius: 6px; border: 1px solid #0864d1; background: rgb(11, 130, 244); color: rgb(255, 255, 255); text-align: center; font-size: 13px; box-shadow: 0px -3px 0px 0px rgba(2, 37, 117, 0.06) inset, 0px 1px 0px 0px rgba(4, 28, 51, 0.04); transition: background 0.3s; margin: 0px; cursor: pointer; outline: none; text-decoration: none; letter-spacing: inherit; font-family: inherit; line-height: inherit;"
    >
      Save
    </button>
    <button
      class="sc-eCYdqJ iDaaHf"
      data-testid="menu-toggle"
      disabled=""
      style="display: inline-flex; justify-content: center; align-items: center; height: 32px; padding-inline: 8px; border-radius: 6px; border: 1px solid #0864d1; background: rgb(11, 130, 244); color: rgb(255, 255, 255); text-align: center; font-size: 13px; box-shadow: 0px -3px 0px 0px rgba(2, 37, 117, 0.06) inset, 0px 1px 0px 0px rgba(4, 28, 51, 0.04); transition: background 0.3s; margin: 0px; cursor: pointer; outline: none; text-decoration: none; letter-spacing: inherit; font-family: inherit; line-height: inherit;"
    >
      <span
        class="sc-gKXOVf kFgTzX"
        size="18"
      >
        <svg
          viewBox="0 0 20 20"
        >
          <path
            d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
            fill="#B3BAC1"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-evZas kgXVOO"
  >
    <div
      class="sc-crXcEl hVvoWJ"
      id=":r6:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-iBkjds fmMROq"
      >
        <hr
          class="sc-iqcoie fxPshx"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-iqcoie fxPshx"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownButton component testing splited enable 1`] = `
<DocumentFragment>
  <div
    class="sc-dkzDqf fxJLUT"
    data-floating-ui-inert=""
    role="button"
  >
    <button
      class="sc-hKMtZM byzedC"
      style="display: inline-flex; justify-content: center; align-items: center; height: 32px; padding-inline: 8px; border-radius: 6px; border: 1px solid #0864d1; background: rgb(11, 130, 244); color: rgb(255, 255, 255); text-align: center; font-size: 13px; box-shadow: 0px -3px 0px 0px rgba(2, 37, 117, 0.06) inset, 0px 1px 0px 0px rgba(4, 28, 51, 0.04); transition: background 0.3s; margin: 0px; cursor: pointer; outline: none; text-decoration: none; letter-spacing: inherit; font-family: inherit; line-height: inherit;"
    >
      Save
    </button>
    <button
      class="sc-eCYdqJ iDaaHf"
      data-testid="menu-toggle"
      style="display: inline-flex; justify-content: center; align-items: center; height: 32px; padding-inline: 8px; border-radius: 6px; border: 1px solid #0864d1; background: rgb(11, 130, 244); color: rgb(255, 255, 255); text-align: center; font-size: 13px; box-shadow: 0px -3px 0px 0px rgba(2, 37, 117, 0.06) inset, 0px 1px 0px 0px rgba(4, 28, 51, 0.04); transition: background 0.3s; margin: 0px; cursor: pointer; outline: none; text-decoration: none; letter-spacing: inherit; font-family: inherit; line-height: inherit;"
    >
      <span
        class="sc-gKXOVf kFgTzX"
        size="18"
      >
        <svg
          viewBox="0 0 20 20"
        >
          <path
            d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
            fill="#FDFEFF"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="sc-evZas gACLam"
  >
    <div
      class="sc-ksZaOG giEGhF fade-transition-enter fade-transition-enter-active"
    >
      <div
        class="sc-breuTD btMEjY"
      />
    </div>
    <div
      class="sc-crXcEl hVvoWJ"
      id=":r4:"
      role="dialog"
      style="position: absolute; top: 0px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="sc-iBkjds fmMROq"
      >
        <hr
          class="sc-iqcoie fxPshx"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Save
          </p>
        </div>
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Save and execute
          </p>
        </div>
        <hr
          class="sc-iqcoie fxPshx"
          color="#E2E8EA"
          orientation="horizontal"
        />
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Save as draft
          </p>
        </div>
        <div
          class="sc-kDDrLX cMggNq"
        >
          <p
            class="sc-bczRLJ dkTFVi sc-jqUVSM"
            color="#041C33"
            font-size="13px"
          >
            Cancel
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
